deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend-service
    template:
        metadata:
            labels:
                app: backend-service
        spec:
            containers:
                - name: backend-service
                  image: westernflow.azurecr.io/westernflow-backend:1.1
                  ports:
                      - containerPort: 8080
                  imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec:
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: 8080
          name: http
    selector:
        app: backend-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    # replicas: 3
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
                update: force-update
        spec:
            containers:
                - name: frontend
                  image: westernflow.azurecr.io/westernflow-frontend:1.1
                  ports:
                      - containerPort: 3000
                  imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
spec:
    ports:
        - port: 80
          targetPort: 3000
    selector:
        app: frontend
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/enable-cors: "true" # Add this line to enable CORS
spec:
    rules:
        - http:
              paths:
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
                  - path: /api/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8080
    ingressClassName: nginx
